2006-01-21  Christian Biesinger  <cbiesinger@web.de>

	* test/mask-beos-rgb24-ref.png:
	* test/mask-beos_bitmap-argb32-ref.png:
	* test/mask-beos_bitmap-rgb24-ref.png:
	* test/set-source-beos-rgb24-ref.png:
	* test/set-source-beos_bitmap-rgb24-ref.png:
	* test/trap-clip-beos-rgb24-ref.png:
	* test/trap-clip-beos_bitmap-rgb24-ref.png:

	Updating BeOS reference images, the tests use a black background
	now.

2006-01-21  Christian Biesinger  <cbiesinger@web.de>

	* test/cairo-test-beos.cpp: (create_beos_surface),
	(create_beos_bitmap_surface):
	* test/cairo-test-beos.h:

	Update BeOS test code per the cairo_format_t -> cairo_content_t
	changes.

2006-01-21  Christian Biesinger  <cbiesinger@web.de>

	* pixman/src/fbpict.c: (detectCPUFeatures):
	* src/cairo-paginated-surface.c:
	(_cairo_paginated_surface_get_target):
	* test/cairo-test.c: (create_image_surface):

	Don't mix declarations and code. This makes the code valid ISO C,
	fixes a gcc -pedantic warning, and unbreaks the build with the
	compiler Zeta ships with.

2006-01-20  Carl Worth  <cworth@cworth.org>

	* src/cairo.h:
	* src/cairo-scaled-font.c: (cairo_scaled_font_get_font_face),
	(cairo_scaled_font_get_font_matrix), (cairo_scaled_font_get_ctm),
	(cairo_scaled_font_get_font_options): Add getter functions for
	cairo_scaled_font_t.

2006-01-20  Carl Worth  <cworth@cworth.org>

	* test/ft-font-create-for-ft-face.c: (draw): Fix test to use
	fontconfig properly so that the test no longer fails. Fixes bug
	#4674. (Thnks to sunmoon1997 for the fix).

2006-01-20  Carl Worth  <cworth@cworth.org>

	* src/cairo-scaled-font.c: (cairo_scaled_font_create): Check
	font_face->status and return a nil scaled font if it is in an
	error state. (Thanks to Christian Biesinger and sunmoon1997 who
	pointed this out as part of bug #4674).

	With this bug fix, the ft-font-create-for-ft-face test fails (as
	it should) since it is abusing fontconfig.

2006-01-19  Carl Worth  <cworth@cworth.org>

	* src/cairo-pdf.h: